--- a/themes/reimu/layout/layout.ejs
+++ b/themes/reimu/layout/layout.ejs
@@ -78,8 +78,8 @@
       <%- render(theme.injector.body_end, 'html'); %>
     <% } %>
     <script>
-      const cdnPath =
-        "https://cdn.jsdelivr.net/gh/Chieko3020/Chieko3020.github.io@main/source/live2d";
+      const cdnPath = "/live2d";
+        // "https://cdn.jsdelivr.net/gh/Chieko3020/Chieko3020.github.io@main/source/live2d";
       const config = {
         // 资源路径
         path: {
