--- a/source/live2d/waifu.css
+++ b/source/live2d/waifu.css
@@ -5,10 +5,10 @@
   color: #fff;
   cursor: pointer;
   font-size: 12px;
-  /* left: 0; */
-  right: 0;
-  /* margin-left: -100px; */
-  margin-right: -90px;
+  left: 0;
+  /* right: 0; */
+  margin-left: -100px;
+  /* margin-right: -90px; */
   padding: 5px 2px 5px 5px;
   position: fixed;
   transition: margin-left 1s;
@@ -18,29 +18,30 @@
 }
 
 #waifu-toggle.waifu-toggle-active {
-  /* margin-left: -50px; */
-  margin-right: -40px;
+  margin-left: -50px;
+  /* margin-right: -40px; */
 }
 
 #waifu-toggle.waifu-toggle-active:hover {
-  /* margin-left: -30px; */
-  margin-right: -20px;
+  margin-left: -30px;
+  /* margin-right: -20px; */
 }
 
 #waifu {
-  bottom: 0px;
-  /* left: 0; */
-  right: 10px;
+  top: 50%;
+  bottom: auto;
+  left: 0;
+  /* right: 10px; */
   line-height: 0;
-  margin-bottom: -10px;
+  margin-bottom: 0px;
   position: fixed;
-  transform: translateY(3px);
+  transform: translateY(-50%);
   transition: transform 0.3s ease-in-out, bottom 3s ease-in-out;
   z-index: 100;
 }
 
 #waifu:hover {
-  transform: translateY(0);
+  transform: translateY(-50%);
 }
 
 #waifu-tips {
@@ -76,7 +77,7 @@
   cursor: grab;
   height: 300px;
   position: relative;
-  width: 300px;
+  width: 225px;
 }
 
 #live2d:active {
@@ -87,8 +88,8 @@
   color: #aaa;
   opacity: 0;
   position: absolute;
-  /* right: -10px; */
-  margin-left: 260px;
+  right: -10px;
+  /* margin-left: 260px; */
   top: 70px;
   transition: opacity 1s;
 }
