--- a/themes/reimu/layout/layout.ejs
+++ b/themes/reimu/layout/layout.ejs
@@ -48,7 +48,7 @@
             <div id="reimu-hits"></div>
             <div id="reimu-pagination" class="reimu-pagination"></div>
           </div>
-          <img class="reimu-bg" src="<%- url_for('/images/reimu.png', {relative: false}) %>"/>
+          <img class="reimu-bg" src="<%- url_for('/images/Background_scenery_default.webp', {relative: false}) %>"/>
         </div>
       </div>
     <% } %>
