--- a/themes/reimu/layout/_partial/header.ejs
+++ b/themes/reimu/layout/_partial/header.ejs
@@ -199,7 +199,7 @@
             } %>
         <h2 id="subtitle-wrap" data-aos="<%= theme.animation.options.header.subTitle %>">
           <% if (subtitle) { %>
-            <span id="subtitle"><%= subtitle %></span>
+            <span id="subtitle"><%- subtitle %></span>
           <% } %>
         </h2>
       <% } %>
