--- a/themes/reimu/layout/layout.ejs
+++ b/themes/reimu/layout/layout.ejs
@@ -35,7 +35,7 @@
           "hitokoto",
           // "asteroids",
           "express",
-          // "switch-model",
+          "switch-model",
           "switch-texture",
           "photo",
           "info",
