--- a/themes/reimu/source/css/_partial/aplayer.styl
+++ b/themes/reimu/source/css/_partial/aplayer.styl
@@ -23,6 +23,11 @@
 .aplayer.aplayer-fixed {
   margin: 0 !important;
 }
+/* 使固定/mini 播放器靠右显示 */
+.aplayer.aplayer-fixed {
+  right: 0 !important;
+  left: auto !important;
+}
 .aplayer.aplayer-fixed .aplayer-body {
   background: var(--color-wrap) !important;
   transition: all .3s;
